# Orbika-Quote-Intelligence-Pipeline

./: .env.example  .gitignore  RUNBOOK.md  alembic.ini  docker-compose.yml  pyproject.toml
Personal_Info/: OpenClaw_Executive_Report.md  Orbika_Extraction_Executive_Report.md
docs/: gmail-quote-extractor.md  incremental-orbika-quote-runner.md  orbika-quote-extractor.md  visual-console.md  windows-local-operation.md
migrations/: README.md  env.py
supplier_catalog/: README.md
tests/: test_agentic_match_reviewer.py  test_cleanup_incremental_outputs.py  test_disfal_catalog_extractor.py  test_gmail_quote_extractor.py  test_incremental_orbika_quote_runner.py  test_live_provider_extractors.py  test_maintenance_retention.py  test_orbika_quote_extractor.py  test_parrales_catalog_extractor.py  test_partcar_catalog_extractor.py  test_phase8_1_regression.py  test_rag_knowledge_base.py  test_repuestera_catalog_extractor.py  test_supplier_quote_matcher.py
tools/: agentic_match_reviewer.py  autolatas_catalog_extractor.py  autopartesercar_catalog_extractor.py  autopartesya_catalog_extractor.py  autorecambiosltda_catalog_extractor.py  cleanup_incremental_outputs.py  corbeta_catalog_extractor.py  customer_preference_store.py  disfal_catalog_extractor.py  exaap_catalog_extractor.py  fanauto_catalog_extractor.py  gmail_quote_extractor.py  imotriz_catalog_extractor.py  imotrizsolucionesautomotrices_catalog_extractor.py  impocali_catalog_extractor.py  import_quotes_to_postgres.py  importadoraeurobrasil_catalog_extractor.py  importadorasasociadas_catalog_extractor.py  (+26 more)
(+294 files in other folders)
