[project]
name = "orbika-quote-intelligence-pipeline"
version = "0.1.0"
description = "Local visual console and API for the Orbika Quote Intelligence Pipeline"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
